book: update pt-br
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Branches-em-poucas-palavras.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Branches-em-poucas-palavras.html
@@ -20,7 +20,7 @@ title: Git - Branches em poucas palavras
 <p>
 Quase todo Sistema de Controle de Versionamento tem alguma forma de suporte a ramificações (Branches).
 Ramificação significa que você diverge da linha principal de desenvolvimento e continua a trabalhar sem alterar essa linha principal.
-Em muitas ferramentas versionamento, este é um processo um tanto difícil, geralmente exigindo que você crie uma nova cópia do diretório do código-fonte, o que pode demorar muito em projetos maiores.</p><p>Algumas pessoas se referem ao modelo de ramificação do Git como seu “recurso matador” e certamente diferencia o Git na comunidade de sistemas de versionamento.
+Em muitas ferramentas de versionamento, este é um processo um tanto difícil, geralmente exigindo que você crie uma nova cópia do diretório do código-fonte, o que pode demorar muito em projetos maiores.</p><p>Algumas pessoas se referem ao modelo de ramificação do Git como seu “recurso matador” e certamente diferencia o Git na comunidade de sistemas de versionamento.
 Por que isso é tão especial?
 A forma como o Git cria branches é incrivelmente leve, tornando as operações de ramificação quase instantâneas, alternando entre os branches geralmente com a mesma rapidez.
 Ao contrário de muitos outros sistemas, o Git incentiva fluxos de trabalho que se ramificam e se fundem com frequência, até mesmo várias vezes ao dia.
@@ -48,7 +48,7 @@ $ git commit -m 'The initial commit of my project'</code></pre>
 </div>
 <div class="paragraph">
 <p>Quando você faz um commit executando <code>git commit</code>, o Git verifica cada subdiretório (neste caso, apenas o diretório raiz do projeto) e armazena esses objetos no repositório do Git.
-O Git então cria um objeto de commit que possui os metadados e um ponteiro para a raiz do projeto para que ele possa recriar aquele snapshots quando necessário.
+O Git então cria um objeto de commit que possui os metadados e um ponteiro para a raiz do projeto para que ele possa recriar aquele snapshot quando necessário.
 </p>
 </div>
 <div class="paragraph">
@@ -83,7 +83,7 @@ Cada vez que você faz um novo commit, ele avança automaticamente.</p>
 </td>
 <td class="content">
 <div class="paragraph">
-<p>O branch ‘` master '’ no Git não é um branch especial. 
+<p>O branch ' <code>master</code> ' no Git não é um branch especial.
 É exatamente como qualquer outra ramificação.
 A única razão pela qual quase todo repositório tem um é que o comando <code>git init</code> o cria por padrão e a maioria das pessoas não se preocupa em alterá-lo.</p>
 </div>
@@ -147,7 +147,7 @@ f30ab (HEAD -&gt; master, testing) add feature #32 - ability to add new formats 
 </div>
 </div>
 <div class="paragraph">
-<p>Você pode ver os branches ‘` master <em>’ e `` testing '</em> que estão bem ali ao lado do commit <code>f30ab</code>.</p>
+<p>Você pode ver os branches <code>master</code> e <code>testing</code> que estão bem ali ao lado do commit <code>f30ab</code>.</p>
 </div>
 </div>
 <div class="sect3">
@@ -163,7 +163,7 @@ Vamos mudar para o novo branch <code>testing</code>:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>Isso move o <code>HEAD</code> e o aponta para o branch` testing`.</p>
+<p>Isso move o <code>HEAD</code> e o aponta para o branch <code>testing</code>.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -188,7 +188,7 @@ $ git commit -a -m 'made a change'</code></pre>
 <div class="title">Figure 15. O branch do HEAD avança quando um commit é feito</div>
 </div>
 <div class="paragraph">
-<p>Isso é interessante, porque agora seu branch <code>testing</code> avançou, mas seu branch` master` ainda aponta para o commit em que você estava quando executou <code>git checkout</code> para alternar entre os branches.
+<p>Isso é interessante, porque agora seu branch <code>testing</code> avançou, mas seu branch <code>master</code> ainda aponta para o commit em que você estava quando executou <code>git checkout</code> para alternar entre os branches.
 Vamos voltar para o branch <code>master</code>:</p>
 </div>
 <div class="listingblock">
@@ -204,7 +204,7 @@ Vamos voltar para o branch <code>master</code>:</p>
 </div>
 <div class="paragraph">
 <p>Esse comando fez duas coisas.
-Ele moveu o ponteiro HEAD de volta para apontar para o branch <code>master</code>, e reverteu os arquivos em seu diretório de trabalho de volta para o snapshots para o qual` master` aponta.
+Ele moveu o ponteiro HEAD de volta para apontar para o branch <code>master</code>, e reverteu os arquivos em seu diretório de trabalho de volta para o snapshot para o qual <code>master</code> aponta.
 Isso também significa que as alterações feitas a partir deste ponto irão divergir de uma versão mais antiga do projeto.
 Essencialmente, ele retrocede o trabalho que você fez em seu branch <code>testing</code> para que você possa ir em uma direção diferente.</p>
 </div>
@@ -238,7 +238,7 @@ $ git commit -a -m 'made other changes'</code></pre>
 <p>Agora o histórico do seu projeto divergiu (consulte <a href="{{< relurl "book/pt-br/v2/ch00/rdivergent_history" >}}">Histórico de diferenças</a>).
 Você criou e mudou para um branch, fez algum trabalho nele e, em seguida, voltou para o seu branch principal e fez outro trabalho.
 Ambas as mudanças são isoladas em branches separados: você pode alternar entre os branches e mesclá-los quando estiver pronto.
-E você fez tudo isso com comandos simples <code>branch</code>,` checkout` e <code>commit</code>.</p>
+E você fez tudo isso com comandos simples <code>branch</code>, <code>checkout</code> e <code>commit</code>.</p>
 </div>
 <div id="rdivergent_history" class="imageblock">
 <div class="content">
@@ -262,11 +262,11 @@ Se você executar <code>git log --oneline --decorate --graph --all</code>, ele m
 </div>
 </div>
 <div class="paragraph">
-<p>Como um branch no Git é na verdade um arquivo simples que contém a verificação SHA-1 de 40 caracteres do commit para o qual ele aponta, branches são fáceis para criar e destruir.
+<p>Como um branch no Git é na verdade um arquivo simples que contém a verificação SHA-1 de 40 caracteres do commit para o qual ele aponta, branches são fáceis de criar e destruir.
 Criar um novo branch é tão rápido e simples quanto escrever 41 bytes em um arquivo (40 caracteres e uma nova linha).</p>
 </div>
 <div class="paragraph">
-<p>Isso está em nítido contraste com a forma como as ferramentas de Versionamento mais antigas se ramificam, o que envolve a cópia de todos os arquivos do projeto em um segundo diretório.
+<p>Isso está em nítido contraste com a forma como as ferramentas de versionamento mais antigas se ramificam, o que envolve a cópia de todos os arquivos do projeto em um segundo diretório.
 Isso pode levar vários segundos ou até minutos, dependendo do tamanho do projeto, enquanto no Git o processo é sempre instantâneo.
 Além disso, como estamos gravando os pais quando fazemos o commit, encontrar uma base adequada para a mesclagem é feito automaticamente para nós e geralmente é muito fácil de fazer.
 Esses recursos ajudam a incentivar os desenvolvedores a criar e usar branches com frequência.</p>
