--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Fluxo-de-Branches.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Fluxo-de-Branches.html
@@ -31,7 +31,7 @@ Isso significa que você pode ter vários branches que estão sempre abertos e q
 </div>
 <div class="paragraph">
 <p>Muitos desenvolvedores Git têm um fluxo de trabalho que adota essa abordagem, como ter apenas código totalmente estável em seu branch <code>master</code> - possivelmente apenas código que foi ou será lançado.
-Eles têm outro branch paralelo chamado <code>developers</code> ou <code>next</code>, a partir do qual trabalham ou usam para testar a estabilidade - nem sempre é necessariamente estável, mas sempre que chega a um estado estável, pode ser mesclado com o <code>master</code>.
+Eles têm outro branch paralelo chamado <code>developers</code> ou <code>next</code>, a partir do qual trabalham ou usam para testar a estabilidade - não é necessáriamente sempre estável, mas sempre que chega a um estado estável, pode ser mesclado com o <code>master</code>.
 É usado para puxar branches de tópico (de curta duração, como seu anterior <code>iss53</code>) quando eles estão prontos, para garantir que eles passem em todos os testes e não introduzam bugs.</p>
 </div>
 <div class="paragraph">
@@ -101,8 +101,8 @@ Seu histórico será assim:</p>
 <p>Iremos entrar em mais detalhes sobre os vários fluxos de trabalho possíveis para seu projeto Git em <a href="{{< relurl "book/pt-br/v2/ch00/ch05-distributed-git" >}}">[ch05-distributed-git]</a>, portanto, antes de decidir qual esquema de ramificação seu próximo projeto usará, certifique-se de ler esse capítulo.</p>
 </div>
 <div class="paragraph">
-<p>É importante lembrar quando você estiver fazendo tudo isso, que esses branches são completamente locais.
-Quando você está ramificando e mesclando, tudo está sendo feito apenas em seu repositório Git - nenhuma comunicação de servidor está acontecendo.</p>
+<p>É importante lembrar quando você estiver fazendo tudo isso que esses branches são completamente locais.
+Quando você está ramificando e mesclando, tudo está sendo feito apenas em seu repositório Git - nenhuma comunicação com o servidor está acontecendo.</p>
 </div>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
