--- a/external/book/content/book/pt-br/v2/Branches-no-Git-O-básico-de-Ramificação-Branch-e-Mesclagem-Merge.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-O-básico-de-Ramificação-Branch-e-Mesclagem-Merge.html
@@ -176,7 +176,7 @@ Em outras palavras, quando você tenta mesclar um commit com outro commit que po
 porque não há nenhum alteração divergente para mesclar — isso é conhecido como um merge “fast-forward.”</p>
 </div>
 <div class="paragraph">
-<p>Agora, a sua alteração está no snapshot do commmit para o qual o branch <code>master</code> aponta, e você você enviar a correção.</p>
+<p>Agora, a sua alteração está no snapshot do commmit para o qual o branch <code>master</code> aponta, e você pode enviar a correção.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -262,7 +262,7 @@ Esse tipo de commit é chamado de commit de merge, e é especial porque tem mais
 <div class="title">Figure 25. Um commit de merge</div>
 </div>
 <div class="paragraph">
-<p>Agora que seu trabalho foi integrado, você não precisa mais do brnach <code>iss53</code>.
+<p>Agora que seu trabalho foi integrado, você não precisa mais do branch <code>iss53</code>.
 Você pode encerrar o chamado no seu sistema e excluir o branch:</p>
 </div>
 <div class="listingblock">
@@ -324,7 +324,7 @@ O seu arquivo contém uma seção que se parece com isso:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>Isso significa que a versão em <code>HEAD</code> (o seu branch <code>master</code>, porque era o que estava selecionado quando você executou o comando merge) é a parte superior daquele bloco (tudo após <code>=======</code>), enquanto que a versão no branch <code>iss53</code> contém a versão na parte de baixo.
+<p>Isso significa que a versão em <code>HEAD</code> (o seu branch <code>master</code>, porque era o que estava selecionado quando você executou o comando merge) é a parte superior daquele bloco (tudo acima de <code>=======</code>), enquanto que a versão no branch <code>iss53</code> contém a versão na parte de baixo.
 Para solucionar o conflito, você precisa escolher um dos lados ou mesclar os conteúdos diretamente.
 Por exemplo, você pode resolver o conflito substituindo o bloco completo por isso:</p>
 </div>
@@ -341,7 +341,7 @@ Após solucionar cada uma dessas seções em cada arquivo com conflito, execute 
 Adicionar o arquivo ao stage o marca como resolvido para o Git.</p>
 </div>
 <div class="paragraph">
-<p>Se você quiser usar uma ferramenta gráfica para resolver os conflitos, você pode executar <code>git mergetool</code>, que inicia uma ferramente de mesclagem visual apropriada e guia você atravès dos conflitos:</p>
+<p>Se você quiser usar uma ferramenta gráfica para resolver os conflitos, você pode executar <code>git mergetool</code>, que inicia uma ferramenta de mesclagem visual apropriada e guia você através dos conflitos:</p>
 </div>
 <div class="listingblock">
 <div class="content">
