--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Rebase.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Rebase.html
@@ -117,7 +117,7 @@ Finalmente, você voltou ao seu branch de servidor e fez mais alguns commits.</p
 </div>
 <div class="paragraph">
 <p>Suponha que você decida que deseja mesclar suas alterações do lado do cliente em sua linha principal para um lançamento, mas deseja adiar as alterações do lado do servidor até que seja testado mais profundamente.
-Você pode pegar as mudanças no cliente que não está no servidor (<code>C8</code> e <code>C9</code>) e reproduzi-las em seu branch <code>master</code> usando a opção <code>--onto</code> do <code>git rebase</code>:</p>
+Você pode pegar as mudanças no cliente que não estão no servidor (<code>C8</code> e <code>C9</code>) e reproduzi-las em seu branch <code>master</code> usando a opção <code>--onto</code> do <code>git rebase</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -125,7 +125,7 @@ Você pode pegar as mudanças no cliente que não está no servidor (<code>C8</c
 </div>
 </div>
 <div class="paragraph">
-<p>Isso basicamente diz: “Pegue o branch <code>client</code>, descubra os patches, desde que divergiu do branch <code>server</code>, e repita esses patches no branch <code>client</code> como se fosse baseado diretamente no branch <code>master</code>.”
+<p>Isso basicamente diz: “Pegue o branch <code>client</code>, descubra os patches, desde que divergiu do branch <code>server</code>, e repita esses patches no branch <code>client</code> como se fosse baseado diretamente no branch <code>master</code>”.
 É um pouco complexo, mas o resultado é bem legal.</p>
 </div>
 <div class="imageblock">
@@ -207,7 +207,7 @@ Do contrário, as pessoas irão odiá-lo e você será desprezado por amigos e f
 </div>
 <div class="paragraph">
 <p>Quando você faz o rebase, você está abandonando commits existentes e criando novos que são semelhantes, mas diferentes.
-Se você enviar commits para algum lugar e outros puxá-los para baixo e trabalhar com base neles, e então você reescrever esses commits com <code>git rebase</code> e colocá-los novamente, seus colaboradores terão que fazer um novo merge em seus trabalhos e as coisas ficarão complicadas quando você tentar puxar o trabalho deles de volta para o seu.</p>
+Se você enviar commits para algum lugar e outras pessoas fizerem o pull e basearem seu trabalho neles, e então você reescrever esses commits com <code>git rebase</code> e enviá-los novamente, seus colaboradores terão que fazer um novo merge em seus trabalhos e as coisas ficarão complicadas quando você tentar puxar o trabalho deles de volta para o seu.</p>
 </div>
 <div class="paragraph">
 <p>Vejamos um exemplo de como o rebase de um trabalho que você tornou público pode causar problemas.
@@ -231,7 +231,7 @@ Você o busca e mescla o novo branch remoto em seu trabalho, fazendo com que seu
 <div class="title">Figure 45. Buscar mais commits e fazer merge em seu trabalho</div>
 </div>
 <div class="paragraph">
-<p>Em seguida, a pessoa que empurrou o trabalho mesclado decide voltar e realocar seu trabalho; eles fazem um <code>git push --force</code> para sobrescrever o histórico no servidor.
+<p>Em seguida, a pessoa que enviou o trabalho mesclado decide voltar atrás e realizar um rebase no trabalho em vez disso; ele faz um <code>git push --force</code> para sobrescrever o histórico no servidor.
 Você então busca daquele servidor, derrubando os novos commits.</p>
 </div>
 <div id="r_pre_merge_rebase_work" class="imageblock">
@@ -275,16 +275,16 @@ Isso é chamado de “patch-id”.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Determine qual trabalho é exclusivo para nosso branch (C2, C3, C4, C6, C7)</p>
+<p>Determinar qual trabalho é exclusivo para nosso branch (C2, C3, C4, C6, C7)</p>
 </li>
 <li>
-<p>Determine quais não são confirmações de merge (C2, C3, C4)</p>
+<p>Determinar quais não são confirmações de merge (C2, C3, C4)</p>
 </li>
 <li>
-<p>Determine quais não foram reescritos no branch de destino (apenas C2 e C3, uma vez que C4 é o mesmo patch que C4')</p>
+<p>Determinar quais não foram reescritos no branch de destino (apenas C2 e C3, uma vez que C4 é o mesmo patch que C4')</p>
 </li>
 <li>
-<p>Aplique esses commits no topo de <code>teamone/master</code></p>
+<p>Aplicar esses commits no topo de <code>teamone/master</code></p>
 </li>
 </ul>
 </div>
