--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Branches-remotos.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Branches-remotos.html
@@ -32,7 +32,7 @@ Branches de rastreamento remoto agem como marcadores para lembrá-lo de onde est
 <div class="paragraph">
 <p>Eles assumem a forma <code>(remoto)/(branch)</code>.
 Por exemplo, se você quiser ver como era o branch <code>master</code> em seu branch remoto <code>origin</code> da última vez que você se comunicou com ele, você deve verificar o branch <code>origin/master</code>.
-Se você estava trabalhando em um problema com um parceiro e ele enviou um branch <code>iss53</code>, você pode ter seu próprio branch local <code>iss53</code>; mas o branch no servidor apontaria para o commit em <code>origin/iss53</code>.</p>
+Se você estava trabalhando em um problema com um parceiro e ele enviou um push branch <code>iss53</code>, você pode ter seu próprio branch local <code>iss53</code>; mas o branch no servidor apontaria para o commit em <code>origin/iss53</code>.</p>
 </div>
 <div class="paragraph">
 <p>Isso pode ser um pouco confuso, então vamos ver um exemplo.
@@ -84,7 +84,7 @@ Este comando procura em qual servidor está a “origin” (neste caso, é <code
 <div class="title">Figure 32. <code>git fetch</code> atualiza suas preferências remotas</div>
 </div>
 <div class="paragraph">
-<p>Para demonstrar a existência de vários servidores remotos e como se parecem os branches remotos para esses projetos, vamos supor que você tenha outro servidor Git interno usado apenas para desenvolvimento por uma de suas equipes.
+<p>Para demonstrar a existência de vários servidores remotos e como as branches remotas desses projetos remotos se parecem, vamos supor que você tenha outro servidor Git interno usado apenas para desenvolvimento por uma de suas equipes.
 Este servidor está em <code>git.team1.ourcompany.com</code>.
 Você pode adicioná-lo como uma nova referência remota ao projeto em que está trabalhando atualmente executando o comando <code>git remote add</code> conforme abordamos em <a href="{{< relurl "book/pt-br/v2/ch00/ch02-git-basics" >}}">[ch02-git-basics]</a>.
 Nomeie este servidor remoto como <code>teamone</code>, que será o seu apelido para toda a URL.</p>
@@ -132,7 +132,7 @@ To https://github.com/schacon/simplegit
 </div>
 <div class="paragraph">
 <p>Este é um atalho.
-O Git expande automaticamente o branch <code>serverfix</code> para <code>refs/heads/serverfix:refs/heads/serverfix</code>, o que significa, “Pegue meu branch local serverfix e empurre-o para atualizar o branch serverfix remoto.”
+O Git expande automaticamente o branch <code>serverfix</code> para <code>refs/heads/serverfix:refs/heads/serverfix</code>, o que significa, “Pegue meu branch local serverfix e empurre-o para atualizar o branch serverfix remoto”.
 Veremos a parte <code>refs/heads/</code> em detalhes em <a href="{{< relurl "book/pt-br/v2/ch00/ch10-git-internals" >}}">[ch10-git-internals]</a>, mas geralmente você pode deixá-la desativada.
 Você também pode fazer <code>git push origin serverfix:serverfix</code>, que faz a mesma coisa - “Pegue meu serverfix e torne-o o serverfix remoto.”
 Você pode usar esse formato para enviar um branch local para um branch remoto com um nome diferente.
@@ -198,13 +198,13 @@ Switched to a new branch 'serverfix'</code></pre>
 <h3 id="r_tracking_branches">Rastreando Branches</h3>
 <div class="paragraph">
 <p>
-Fazer check-out de um branch local de um branch remoto cria automaticamente o que é chamado de “tracking branch” (e o branch que ele rastreia é chamado de “branch upstream”).
+Fazer check-out de um branch local a partir de um branch remoto cria automaticamente o que é chamado de “tracking branch” (e o branch que ele rastreia é chamado de “branch upstream”).
 “Tracking branch” são branches locais que têm um relacionamento direto com um branch remoto.
 Se você estiver em um branch de rastreamento e digitar <code>git pull</code>, o Git saberá automaticamente de qual servidor buscar o branch para fazer o merge.</p>
 </div>
 <div class="paragraph">
 <p>Quando você clona um repositório, geralmente ele cria automaticamente um branch <code>master</code> que rastreia <code>origin/master</code>.
-No entanto, você pode configurar outros branches de rastreamento se desejar - aqueles que rastreiam branches em outros branches remotos ou não rastreiam o branch <code>master</code>.
+No entanto, você pode configurar outros branches de rastreamento se desejar - aqueles que rastreiam branches em outros branches remotos, ou não rastreiam o branch <code>master</code>.
 O caso simples é o exemplo que você acabou de ver, executando <code>git checkout -b [branch] [remotename]/[branch]</code>.
 Esta é uma operação suficiente para que o Git forneça a abreviação <code>--track</code>:</p>
 </div>
