Add missing <br> for Ubuntu PPA instructions
The instructions for adding the PPA in Ubuntu were missing a newline. This change fixes that.

--- a/content/downloads/linux.html
+++ b/content/downloads/linux.html
@@ -17,7 +17,7 @@ aliases:
   <p>For the latest stable version for your release of Debian/Ubuntu</p>
   <code># apt-get install git</code>
   <p>For Ubuntu, this PPA provides the latest stable upstream Git version</p>
-  <code># add-apt-repository ppa:git-core/ppa</code>
+  <code># add-apt-repository ppa:git-core/ppa</code><br>
   <code># apt update; apt install git</code>
 
   <h3>Fedora</h3>
