book: update uk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/uk/v2/GitHub-Керування-організацією.html
+++ b/external/book/content/book/uk/v2/GitHub-Керування-організацією.html
@@ -13,7 +13,7 @@ book:
     title: Керування організацією
     number: 4
     cs_number: '6.4'
-    previous: book/uk/v2/GitHub-Супроводжування-проекту
+    previous: book/uk/v2/GitHub-Супроводжування-проєкту
     next: book/uk/v2/GitHub-Скриптування-GitHub
 title: Git - Керування організацією
 url: "/book/uk/v2/GitHub-Керування-організацією.html"
