--- a/external/book/content/book/uk/v2/GitHub-Як-зробити-внесок-до-проекту.html
+++ b/external/book/content/book/uk/v2/GitHub-Як-зробити-внесок-до-проекту.html
@@ -14,7 +14,7 @@ book:
     number: 2
     cs_number: '6.2'
     previous: book/uk/v2/GitHub-Створення-та-налаштування-облікового-запису
-    next: book/uk/v2/GitHub-Супроводжування-проекту
+    next: book/uk/v2/GitHub-Супроводжування-проєкту
 title: Git - Як зробити внесок до проекту
 url: "/book/uk/v2/GitHub-Як-зробити-внесок-до-проекту.html"
 ---
