--- a/external/book/content/book/gr/v2/_index.html
+++ b/external/book/content/book/gr/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/gr/v2.html"
 aliases:
 - "/book/gr/v2/index.html"
+- "/book/gr/v1/index.html"
 - "/book/gr/index.html"
 ---
